SERVER-45009: Run onStepdown on the TransactionCoordinatorService to prevent tests from hanging at shutdown